syntax = "proto3";

package gateway;

option go_package = "gitlab.haochang.tv/gopkg/nodehub/proto/gatewaypb";

import "google/rpc/status.proto";

enum Protocol {
	UNSPECIFIED = 0;
	RPC_ERROR = 1;
}

// 网关透传grpc请求后，返回的grpc错误
message RPCError {
	// request消息请求的服务
	int32 request_service = 1;

	// request消息请求的方法
	string request_method = 2;

	// 详细错误信息
	google.rpc.Status status = 3;
}
